# nanobindgen

./: pyproject.toml
.github/workflows/: publish.yml
src/nanobindgen/: __init__.py  __main__.py  emit.py  errors.py  ir.py  parse.py  tags.py  validate.py
tests/: expected_output.h  input.h
tests/fixtures/errors/: arity_violation.h  bind_marker_missing.h  mutual_exclusion.h  prop_unpaired.h  required_body.h  unknown_tag.h  wrong_target.h
tests/golden/: expected_output.h  input.h  test_golden.py
tests/unit/: test_emit.py  test_errors.py  test_ir.py  test_parse.py  test_tags.py  test_validate.py
